Fix mobile scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@ body {
 
 #game-viewport {
     position: relative;
-    max-height: calc(100vh - 56px);
+    height: calc(100vh - 56px);
     max-width: 100%;
     overflow: auto;
 }
